Fixed Dividends Column-Added Profit/Loss Column

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
                 <tr>
                   <th>السنة</th>
                   <th>الإيداعات الإجمالية</th>
-                  <th class="dividend-only hidden">التوزيعات</th>
+                  <th class="dividend-only hidden">التوزيعات السنوية</th>
                   <th>الرصيد بنهاية السنة</th>
+                  <th>الأرباح/الخسائر</th>
                 </tr>
               </thead>
               <tbody></tbody>
